--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
 
     <meta name="author" content="Kodam Srikanth">
 
-    <meta name="keywords" content="RO Water Purifiers Service and Sales, RO Water Purifiers Service and Sales in Godavarikhani, Srikanth Water Solution, water purifier sales in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), 
-    Colony (405206), and Manchirial (504208) water purifier services, RO water purifiers, Alkaline water purifiers, Copper water purifiers, water purification solutions, purosis ro water purifier, 
-    purosis ro water purifier in godavarikhani, water purifier installation, godavarikhani ro water purifiers" />
+    <meta name="keywords" content="Dental Care in Godavarikhani, Dentist in Godavarikhani (505209), Dental Clinic in Godavarikhani (505208), Peddapalli (505172), Manchirial (504208), Tooth Cleaning, Root Canal Treatment, Dental Implants, Braces, Cosmetic Dentistry, Teeth Whitening, Oral Surgery, Family Dentist, Srikanth Dental Care" />
 
-    <meta name="description"
-        content="Srikanth Water Solution offers RO Water Purifiers Service and Sales in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), 
-    Colony (405206), and Manchirial (504208). Ensure pure, safe, and healthy water with our high-quality water purifiers." />
+<meta name="description"
+    content="Srikanth Dental Care offers expert dental services in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), and Manchirial (504208). Our services include dental implants, root canals, braces, teeth cleaning, and cosmetic dentistry to keep your smile healthy and confident." />
 
-    <meta property="og:site_name" content="Srikanth Water Solution">
+
+    <meta property="og:site_name" content="Dental Care">
 
     <meta property="og:url" content="https://kodamsrikanth.github.io/dentalwebsite/">
 
     <meta property="og:type" content="website/product">
 
-    <meta property="og:title" content="RO Water Purifiers Service and Sales by Srikanth Water Solution">
+   <meta name="keywords" content="Dental Care in Godavarikhani, Dentist in Godavarikhani (505209), Dental Clinic in Godavarikhani (505208), Peddapalli (505172), Manchirial (504208), Tooth Cleaning, Root Canal Treatment, Dental Implants, Braces, Cosmetic Dentistry, Teeth Whitening, Oral Surgery, Family Dentist, Srikanth Dental Care" />
 
-    <meta property="og:description" content="Srikanth Water Solution offers Aquafresh dolphin water purifier sales and services in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), 
-    Colony (405206), and Manchirial (504208). Ensure pure, safe, and healthy water with our high-quality water purifiers.">
+    <meta name="description"
+    content=" Dental Care offers expert dental services in Godavarikhani (505209), Godavarikhani (505208), Peddapalli (505172), and Manchirial (504208). Our services include dental implants, root canals, braces, teeth cleaning, and cosmetic dentistry to keep your smile healthy and confident." />
+
 
     <meta property="og:image" content="https://kodamsrikanth.github.io/dentalwebsite/images/logo123.jpg">
 
@@ -1174,4 +1173,5 @@
 </body>
 
 </html>
+
 
